Working chunk system and revisiting chunks array

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "${workspaceFolder}/**",
         "/opt/homebrew/opt/glm/include",
         "/opt/homebrew/opt/glew/include",
-        "/opt/homebrew/opt/glfw/include"
+        "/opt/homebrew/opt/glfw/include",
+        "/opt/homebrew/opt/freeglut/include"
     ]
 }
