--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,9 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
