--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,12 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "deque": "cpp",
+        "memory": "cpp",
+        "print": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
